# januslens

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  release.sh  renovate.json  start-dev.sh  status-summary.md  tsconfig.json  vite.config.ts
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_issue.md  feature_request.md
.github/workflows/: ci.yml  dependencies.yml  release.yml  test.yml
assets/: architecture.txt
docs/: ARCHITECTURE.md  DEVELOPER.md  GIT_FEATURES_ROADMAP.md  PROJECT_PLAN.md  SETUP.md  TESTING_PLAN.md
src/: main.rs
src-frontend/: App.svelte  SimpleApp.svelte  main.ts  styles.css  svelte-env.d.ts  test-ui.js  test-ui.ts
src-frontend/components/: BranchList.svelte  BranchManager.svelte  CommitPanel.svelte  DiffViewer.svelte  GitGraph.svelte  MainLayout.svelte  RepoExplorer.svelte  StatusDisplay.svelte
src-frontend/services/: logger.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  git.rs  git_test.rs  lib.rs  logging.rs  main.rs  test_utils.rs
src-tauri/src/tests/: branch_operations_test.rs  commit_history_test.rs  file_diff_test.rs  file_operations_test.rs
tools/: ai-git.sh  ai-run-tauri.sh  safe-run.sh
