[package]
name = "januslens"
version = "0.1.0"
description = "A high-performance Git visualization tool"
authors = ["Your Name <your.email@example.com>"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
git2 = "0.18.0"
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["full"] }
log = "0.4.20"
env_logger = "0.10.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"] 